--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </div>
     
     <script src="https://kit.fontawesome.com/17383348a8.js" crossorigin="anonymous"></script>
-    <script src="main.js"></script>
+    <!-- <script src="main.js"></script> -->
+     <script src="logic.js"></script>
 </body>
 </html>
